--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 ###> symfony/framework-bundle ###
-APP_ENV=dev
+APP_ENV=prod
 APP_SECRET=65ea3db34e79b21e37acd9394cc04c34
 ###< symfony/framework-bundle ###
 
