--- a/.env
+++ b/.env
@@ -1,5 +1,6 @@
 ###> symfony/framework-bundle ###
 APP_ENV=prod
+APP_DEBUG=0
 APP_SECRET=65ea3db34e79b21e37acd9394cc04c34
 ###< symfony/framework-bundle ###
 
@@ -8,12 +9,12 @@ DATABASE_URL='mysql://root:hbriFKbGCATvKytlWqaxawwZokjubeqa@caboose.proxy.rlwy.n
 ###< doctrine/doctrine-bundle ###
 
 ###> nelmio/cors-bundle ###
-CORS_ALLOW_ORIGIN='^https?://(localhost|127\.0\.0\.1)(:[0-9]+)?$'
+CORS_ALLOW_ORIGIN='^https?://(localhost|127\.0\.0\.1|gestion-production-[a-z0-9]+\.up\.railway\.app)(:[0-9]+)?$'
 ###< nelmio/cors-bundle ###
 
 ###> docker/db ###
 IMAGE_TAG=dev
-SERVER_NAME=localhost
 ###< docker/php ###
 
-TRUSTED_PROXIES='127.0.0.0/8,10.0.0.0/8,172.16.0.0/12,192.168.0.0/16'
+TRUSTED_PROXIES='0.0.0.0/0'
+TRUSTED_HOSTS='^gestion-production-[a-z0-9]+\.up\.railway\.app$'
