--- a/.env.default
+++ b/.env.default
@@ -1,23 +1,26 @@
 ###> symfony/framework-bundle ###
-APP_ENV=dev
-APP_SECRET=65ea3db34e79b21e37acd9394cc04c34
+APP_ENV='prod'
+APP_SECRET='65ea3db34e79b21e37acd9394cc04c34'
 ###< symfony/framework-bundle ###
 
 ###> doctrine/doctrine-bundle ###
-DATABASE_URL='mysql://root:p@ssword@db:3306/task_sphere?serverVersion=8.0.32&charset=utf8mb4'
-MYSQL_DATABASE='task_sphere'
-MYSQL_PASSWORD='p@ssword'
-MYSQL_ROOT_PASSWORD='p@ssword'
+MYSQL_HOST='tasker-db'
+MYSQL_PORT='3306'
+MYSQL_DATABASE='tasker'
+MYSQL_PASSWORD='Pssw0rd'
+MYSQL_ROOT_PASSWORD='Pssw0rd'
 MYSQL_USER='user'
+MARIADB_AUTO_UPGRADE=1
+DATABASE_URL='mysql://root:Pssw0rd@tasker-db:3306/tasker?serverVersion=mariadb-10.11.11&charset=utf8mb4'
 ###< doctrine/doctrine-bundle ###
 
 ###> nelmio/cors-bundle ###
 CORS_ALLOW_ORIGIN='^https?://(localhost|127\.0\.0\.1)(:[0-9]+)?$'
 ###< nelmio/cors-bundle ###
 
-###> docker/db ###
-IMAGE_TAG=dev
-SERVER_NAME=localhost
+###> docker/tasker-db ###
+IMAGE_TAG='prod'
+SERVER_NAME='localhost'
 ###< docker/php ###
 
 TRUSTED_PROXIES='127.0.0.0/8,10.0.0.0/8,172.16.0.0/12,192.168.0.0/16'
