--- a/.env
+++ b/.env
@@ -5,16 +5,16 @@ APP_SECRET=65ea3db34e79b21e37acd9394cc04c34
 ###< symfony/framework-bundle ###
 
 ###> doctrine/doctrine-bundle ###
-DATABASE_URL='mysql://root:hbriFKbGCATvKytlWqaxawwZokjubeqa@caboose.proxy.rlwy.net:33580/railway'
+DATABASE_URL=mysql://root:tXDaKssxRrcphIQFLgJnxnRpJqKojQJF@interchange.proxy.rlwy.net:13286/railway
 ###< doctrine/doctrine-bundle ###
 
 ###> nelmio/cors-bundle ###
-CORS_ALLOW_ORIGIN='^https?://(localhost|127\.0\.0\.1|gestion-production-[a-z0-9]+\.up\.railway\.app)(:[0-9]+)?$'
+CORS_ALLOW_ORIGIN=^https?://(localhost|127\.0\.0\.1|gestion-production-[a-z0-9]+\.up\.railway\.app)(:[0-9]+)?$
 ###< nelmio/cors-bundle ###
 
 ###> docker/db ###
 IMAGE_TAG=dev
 ###< docker/php ###
 
-TRUSTED_PROXIES='0.0.0.0/0'
-TRUSTED_HOSTS='^gestion-production-[a-z0-9]+\.up\.railway\.app$'
+TRUSTED_PROXIES=0.0.0.0/0
+TRUSTED_HOSTS=^gestion-production-[a-z0-9]+\.up\.railway\.app$
