--- a/compose.yaml
+++ b/compose.yaml
@@ -1,61 +1,33 @@
 services:
-  tasker-db:
-    image: mariadb:10.11
-    ports:
-      - ${MYSQL_PORT}:${MYSQL_PORT}
-    environment:
-      MYSQL_HOST: ${MYSQL_HOST} # Should be tasker-db
-      MYSQL_DATABASE: ${MYSQL_DATABASE}
-      MYSQL_ROOT_PASSWORD: ${MYSQL_ROOT_PASSWORD}
-      MYSQL_USER: ${MYSQL_USER}
-      MYSQL_PASSWORD: ${MYSQL_PASSWORD}
-      MARIADB_AUTO_UPGRADE: ${MARIADB_AUTO_UPGRADE}
-      MYSQL_UNIX_PORT: ${MYSQL_PORT}
-      MYSQL_TCP_PORT: ${MYSQL_PORT}
-
   tasker-php:
-    depends_on:
-      - tasker-db
     environment:
-      MYSQL_HOST: ${MYSQL_HOST} # Should be tasker-db
-      MYSQL_PORT: ${MYSQL_PORT}
-      MYSQL_TCP_PORT: ${MYSQL_PORT}
-      MYSQL_UNIX_PORT: ${MYSQL_PORT}
-      MYSQL_DATABASE: ${MYSQL_DATABASE}
-      MYSQL_ROOT_PASSWORD: ${MYSQL_ROOT_PASSWORD}
-      MYSQL_USER: ${MYSQL_USER}
-      MYSQL_PASSWORD: ${MYSQL_PASSWORD}
-      MARIADB_AUTO_UPGRADE: ${MARIADB_AUTO_UPGRADE}
       DATABASE_URL: ${DATABASE_URL}
       SERVER_NAME: ${SERVER_NAME:-localhost}
-      TRUSTED_HOSTS: ^${SERVER_NAME:-example\.com|localhost}|php$$
+      TRUSTED_HOSTS: ^${SERVER_NAME:-example.com|localhost}|php$$
       TRUSTED_PROXIES: ${TRUSTED_PROXIES:-127.0.0.0/8,10.0.0.0/8,172.16.0.0/12,192.168.0.0/16}
     build:
       context: .
       target: frankenphp_prod
     volumes:
-      - ./:/app:Z
-      - ./frankenphp/Caddyfile:/etc/caddy/Caddyfile:roZ
-      - ./frankenphp/conf.d/app.dev.ini:/usr/local/etc/php/conf.d/app.dev.ini:roZ
-      - caddy_data:/data:Z
-      - caddy_config:/config:Z
-    extra_hosts:
-      - host.docker.internal:host-gateway
-    ports:
-      # HTTP
-      - target: 80
-        published: 80
-        protocol: tcp
-      # HTTPS
-      - target: 443
-        published: 443
-        protocol: tcp
-      # HTTP/3
-      - target: 443
-        published: 443
-        protocol: udp
+      
+./:/app:Z
+./frankenphp/Caddyfile:/etc/caddy/Caddyfile:roZ
+./frankenphp/conf.d/app.dev.ini:/usr/local/etc/php/conf.d/app.dev.ini:roZ
+caddy_data:/data:Z
+caddy_config:/config:Z
+extra_hosts:
+host.docker.internal:host-gateway
+ports:
+target: 80
+  published: 80
+  protocol: tcp
+target: 443
+published: 443
+protocol: tcp
+target: 443
+published: 443
+protocol: udp
 
 volumes:
   caddy_data:
   caddy_config:
-  db_data:
