--- a/compose.yaml
+++ b/compose.yaml
@@ -1,7 +1,7 @@
 services:
   tasker-php:
     environment:
-      DATABASE_URL: ${DATABASE_URL}
+      DATABASE_URL: "mysql://root:tXDaKssxRrcphIQFLgJnxnRpJqKojQJF@interchange.proxy.rlwy.net:13286/railway"
       SERVER_NAME: ${SERVER_NAME:-localhost}
       TRUSTED_HOSTS: ^${SERVER_NAME:-example.com|localhost}|php$$
       TRUSTED_PROXIES: ${TRUSTED_PROXIES:-127.0.0.0/8,10.0.0.0/8,172.16.0.0/12,192.168.0.0/16}
