--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 ###> symfony/framework-bundle ###
-APP_ENV=prod
-APP_DEBUG=0
+APP_ENV=dev
+APP_DEBUG=1
 APP_SECRET=65ea3db34e79b21e37acd9394cc04c34
 ###< symfony/framework-bundle ###
 
