--- a/frankenphp/Caddyfile
+++ b/frankenphp/Caddyfile
@@ -1,6 +1,9 @@
 {
     order php_server before file_server
-    auto_https disable_redirects
+
+    frankenphp {
+
+    }
 }
 
 {$SERVER_NAME:localhost} {
@@ -8,10 +11,7 @@
 
     encode zstd br gzip
 
-    header {
-        Strict-Transport-Security "max-age=63072000; includeSubDomains; preload"
-        Permissions-Policy "browsing-topics=()"
-    }
+    header ?Permissions-Policy "browsing-topics=()"
 
     php_server
 }
